feat(blueprint): implement call macro expansion + clear_and_build master blueprint
Blueprint.call now fully functional:
- Blueprint record gains @Nullable BlueprintDefinition definition field
- BlueprintConfigLoader registers DSL blueprints with definition for call support
- expandCall(): look up callee → validate params → evaluate "with" expressions
  → expand callee steps inline with recursion-protected call stack
- Legacy lambda blueprints (no definition) rejected for call → exception

BuildingConfig.BoundaryBox:
- New AABB record: (BlockOffset min, max) with allPositions() volume iterator
- Parsed from JSON boundary field in Deserializer
- EnqueueHelper.computeClearOffsets(): boundary volume minus pattern offsets

build:clear_and_build blueprint:
- Master blueprint: clear non-pattern blocks within boundary → call place_structure
- Params: clear_offsets(list<pos>), offsets, blocks, name, anchor
- clear_offsets pre-computed by EnqueueHelper from boundary + pattern
- All 3 building JSONs now reference build:clear_and_build

Tests: +5 (call expand, missing param, recursion, legacy reject, clear_and_build flow)
258 tests all pass.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>